dynamic icon on show page

--- a/app/views/campaigns/_investor.html.erb
+++ b/app/views/campaigns/_investor.html.erb
@@ -12,7 +12,7 @@
       </div>
 
       <h2 class="mt-5 font-weight-bold"><%= @campaign.company.name %></h2>
-      <h6 class="text-grey"><%= @campaign.company.type_store %></h6>
+      <h6 class="text-grey" id="company_type"><%= @campaign.company.type_store %></h6>
 
       <div>
         <div class="w-75" style="margin: 0 auto;">
