--- a/app/views/campaigns/my_campaigns.html.erb
+++ b/app/views/campaigns/my_campaigns.html.erb
@@ -4,8 +4,14 @@
     <div class="sidebar-heading"><%= current_user.first_name%> <%= current_user.last_name%> </div>
     <div class="list-group list-group-flush">
       <a href="#" class="list-group-item list-group-item-action bg-light">Dashboard</a>
-      <a href="#" class="list-group-item list-group-item-action bg-light">Campaign</a>
+      <a href="/mycampaigns" class="list-group-item list-group-item-action bg-light">Campaign</a>
       <a href="#" class="list-group-item list-group-item-action bg-light">Support</a>
     </div>
   </div>
   <!-- /#sidebar-wrapper -->
+
+
+      <a href="/myinvestments" class="list-group-item list-group-item-action bg-light">Dashboard</a>
+      <a href="/myinvestments/dashboard" class="list-group-item list-group-item-action bg-light">Investments</a>
+      <a href="/myinvestments/myrewards" class="list-group-item list-group-item-action bg-light">Rewards</a>
+      <a href="/myinvestments/mymap" class="list-group-item list-group-item-action bg-light">Map</a>
