max to mintarget

--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -36,11 +36,11 @@
         </div>
 
         <div class="box-align">
-          <h4>$ <%= number_with_delimiter(campaign.max_target, :delimiter => ',') %> target</h4>
+          <h4>$ <%= number_with_delimiter(campaign.min_target, :delimiter => ',') %> target</h4>
         </div>
         <div class="target-bar">
           <% raised = Investment.where(campaign_id: campaign.id).sum("amount") %>
-          <% target = campaign.max_target %>
+          <% target = campaign.min_target %>
           <% status = ((raised.to_f/target)*100).round(1) %>
           <div>
             <progress value=<%= status %> max="100" id="progress-bar-percentage" class="progress-bar notfull">
