--- a/app/views/investments/dashboard_myinvestments.html.erb
+++ b/app/views/investments/dashboard_myinvestments.html.erb
@@ -33,7 +33,7 @@
         </div>
 
         <div class="box-align">
-          <h4>$ <%#= number_with_delimiter(investment.max_target, :delimiter => ',') %> target</h4>
+          <h4>$ <%#= number_with_delimiter(investment.min_target, :delimiter => ',') %> target</h4>
         </div>
         <div class="target-bar">
           <div>
