--- a/app/views/campaigns/_form.html.erb
+++ b/app/views/campaigns/_form.html.erb
@@ -1,21 +1,22 @@
  <div class="container w-50">
   <div class="justify-content-center text-center">
 
-    <h3>Your Company</h3>
     <%= simple_form_for(@campaign) do |c| %>
     <%= c.error_notification %>
     <%= c.error_notification message: c.object.errors[:base].to_sentence if c.object.errors[:base].present? %>
 
-  <div id="company-form">
 
-      <%= simple_fields_for(@company) do |f| %>
-      <!-- company name input -->
+    <%= simple_fields_for(@company) do |f| %>
+    <!-- company name input -->
+    <div id="company-form">
+      <h3>Your Company</h3>
       <div class="form-group row">
         <label for="company_name" class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10 w-50">
           <input type="text" class="form-control" name="company[name]" id="company_name">
         </div>
       </div>
+
 
       <!-- address search field -->
       <div class="form-group row">
@@ -25,6 +26,7 @@
         </div>
       </div>
 
+
       <!-- number of employees -->
       <div class="form-group row">
         <label class="col-sm-2 col-form-label string optional" for="company_num_of_employees">Employees</label>
@@ -33,12 +35,12 @@
        </div>
      </div>
 
-     <!-- category choice -->
 
+     <!-- category choice -->
      <div class="form-group row">
       <label class="col-sm-2 col-form-label" for="company_type_store">Type Store</label>
 
-
+      <!-- multiple options -->
       <div class="col-sm-10 w-50 align-self-center">
         <div class="custom-control custom-radio custom-control-inline">
           <input type="radio" value="restaurant" id="company[type_store]" name="company[type_store]" class="custom-control-input">
@@ -55,9 +57,8 @@
           <label class="custom-control-label" for="company_type_store">Bar</label>
         </div>
       </div>
-
-
     </div>
+
 
     <div class="input-group">
       <div class="input-group-prepend">
@@ -76,28 +77,27 @@
 
   </div>
 
-  <br>
-  <br>
+
 
   <div id="campaign-form" class="d-none" style="">
-
     <h3>Your campagin</h3>
 
     <div class="form-inputs">
+      <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <label class="input-group-text" style="width: 200px;">Campaign Title</label>
+        </div>
+        <textarea class="form-control" name="campaign[title]" id="campaign[title]" aria-label="With textarea"></textarea>
+      </div>
+
 
       <div class="input-group mb-3">
         <div class="input-group-prepend">
-          <span class="input-group-text" style="width: 200px;">Campaign Title</span>
+          <label class="input-group-text" style="width: 200px;">Campaign description</label>
         </div>
-        <textarea class="form-control" id="campaign_title" aria-label="With textarea"></textarea>
+        <textarea class="form-control" name="campaign[description]" id="campaign[description]" aria-label="With textarea"></textarea>
       </div>
 
-      <div class="input-group mb-3">
-        <div class="input-group-prepend">
-          <span class="input-group-text" style="width: 200px;">Campaign description</span>
-        </div>
-        <textarea class="form-control" id="campaign_description" aria-label="With textarea"></textarea>
-      </div>
 
       <div class="input-group mb-3">
         <label class="string optional w-25" for="min_target">Minimum Amount</label>
@@ -109,6 +109,7 @@
           <span class="input-group-text">.00</span>
         </div>
       </div>
+
 
       <div class="input-group mb-3">
         <label class="string optional w-25" for="min_target">Maximum Target</label>
@@ -126,24 +127,24 @@
       <!-- Radio button inline loan duration -->
       <label class="string optional w-25" for="campaign_loan_duration">Loan duration</label>
       <div class="custom-control custom-radio custom-control-inline">
-        <input type="radio" value="12" id="campaign_loan_duration_12" name="campaign[loan_duration]" class="custom-control-input">
-        <label class="custom-control-label" for="customRadioInline1">12</label>
+        <input type="radio" value="12" id="campaign[loan_duration]" name="campaign[loan_duration]" class="custom-control-input">
+        <label class="custom-control-label" for="campaign_loan_duration">12</label>
       </div>
       <div class="custom-control custom-radio custom-control-inline">
-        <input type="radio" value="24"  id="campaign_loan_duration_24" name="customRadioInline1" class="custom-control-input">
-        <label class="custom-control-label" for="customRadioInline2">24</label>
+        <input type="radio" value="24"  id="campaign[loan_duration]" name="campaign[loan_duration]" class="custom-control-input">
+        <label class="custom-control-label" for="campaign_loan_duration">24</label>
       </div>
       <div class="custom-control custom-radio custom-control-inline">
-        <input type="radio" value="36"  id="campaign_loan_duration_36" name="customRadioInline1" class="custom-control-input">
-        <label class="custom-control-label" for="customRadioInline2">36</label>
+        <input type="radio" value="36"  id="campaign[loan_duration]" name="campaign[loan_duration]" class="custom-control-input">
+        <label class="custom-control-label" for="campaign_loan_duration">36</label>
       </div>
       <div class="custom-control custom-radio custom-control-inline">
-        <input type="radio" value="48"  id="campaign_loan_duration_48" name="customRadioInline1" class="custom-control-input">
-        <label class="custom-control-label" for="customRadioInline2">48</label>
+        <input type="radio" value="48"  id="campaign[loan_duration]" name="campaign[loan_duration]" class="custom-control-input">
+        <label class="custom-control-label" for="campaign_loan_duration">48</label>
       </div>
       <div class="custom-control custom-radio custom-control-inline">
-        <input type="radio" value="60"  id="campaign_loan_duration_60" name="customRadioInline1" class="custom-control-input">
-        <label class="custom-control-label" for="customRadioInline2">60</label>
+        <input type="radio" value="60"  id="campaign[loan_duration]" name="campaign[loan_duration]" class="custom-control-input">
+        <label class="custom-control-label" for="campaign_loan_duration">60</label>
       </div>
 
     </div>
@@ -158,14 +159,14 @@
 </div>
 </div>
 
- <script>
-    const toggle = document.getElementById("continue");
-    toggle.addEventListener('click', (e) => {
-      e.preventDefault();
-      document.getElementById("company-form").classList.toggle('d-none');
-      document.getElementById("campaign-form").classList.toggle('d-none');
-    });
-  </script>
+<script>
+  const toggle = document.getElementById("continue");
+  toggle.addEventListener('click', (e) => {
+    e.preventDefault();
+    document.getElementById("company-form").classList.toggle('d-none');
+    document.getElementById("campaign-form").classList.toggle('d-none');
+  });
+</script>
 
 <style>
   .custom-control-input {
