My campaign owner routes

--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -2,5 +2,5 @@
   <p>Internal note: You are an owner</p>
   <%= render "campaigns/shared/showowner" %>
 <% else %>
-  <%= render "investor" %>
+  <%= render "campaigns/shared/investor" %>
 <% end %>
