--- a/app/views/campaigns/support.html.erb
+++ b/app/views/campaigns/support.html.erb
@@ -1,5 +1,6 @@
 <div class="d-flex" id="wrapper">
-  <!-- Sidebar -->
+
+
   <div class="bg-light border-right" id="sidebar-wrapper">
     <div class="sidebar-heading"><%= current_user.first_name%> <%= current_user.last_name%> </div>
     <div class="list-group list-group-flush">
@@ -8,6 +9,11 @@
       <a href="support" class="list-group-item list-group-item-action bg-light">Support</a>
     </div>
   </div>
-  <!-- /#sidebar-wrapper -->
 
+<!-- Page content -->
+  <h1>Support</h1>
+<!-- Page content end-->
+
+<!-- /#closing-wrapper -->
 </div>
+<!-- /#closing-wrapper -->
