form successfully created campagin and investment

--- a/app/views/campaigns/_form.html.erb
+++ b/app/views/campaigns/_form.html.erb
@@ -71,10 +71,9 @@
     <button class="btn btn-outline-secondary" type="submit">Back</button>
     <button class="btn btn-secondary" type="submit" id="continue">Continue</button>
 
-    <div>All data completed?</div>
+    <!-- <div>All data completed?</div> -->
 
     <% end %>
-
   </div>
 
 
