--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -1,4 +1,4 @@
-<%= link_to my_campaigns_path do %>
+<%= link_to owners_dashboard_path do %>
 <i class="fas fa-chevron-circle-left ml-3 mt-3 exit-button" style="font-size: 48px; color: grey;"></i>
 <% end %>
 
