create campaign update

--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -2,4 +2,4 @@
 <i class="fas fa-chevron-circle-left ml-3 mt-3 exit-button" style="font-size: 48px; color: grey;"></i>
 <% end %>
 
-<%= render 'form', campaign: @campaign %>
+<%= render 'campaigns/shared/form', campaign: @campaign %>
