--- a/app/views/campaigns/shared/_form.html.erb
+++ b/app/views/campaigns/shared/_form.html.erb
@@ -1,5 +1,5 @@
  <div class="container">
-  <div class="row justify-content-center text-center">
+  <div class="row text-center">
 
     <%= simple_form_for(@campaign) do |f| %>
     <%= f.error_notification %>
