--- a/app/views/campaigns/shared/_form.html.erb
+++ b/app/views/campaigns/shared/_form.html.erb
@@ -82,7 +82,7 @@
 
 
   <div id="campaign-form" class="d-none" style="">
-    <h3>Your campagin</h3>
+    <h3>Your Campaign</h3>
 
     <div class="form-inputs">
       <div class="input-group mb-3">
