--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -7,7 +7,7 @@ $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
-$grey: grey;
+$grey: #0E0000;
 $light-gray: #F4F4F4;
 $light-green: #e8faf0;
 $mid-green: #a0edc3;
