--- a/app/views/campaigns/shared/_form.html.erb
+++ b/app/views/campaigns/shared/_form.html.erb
@@ -166,9 +166,9 @@
             <div class="input-group-prepend">
               <span class="input-group-text">$</span>
             </div>
-            <input type="text" class="integer form-control text-left w-25" aria-label="Amount (to the nearest dollar)" name="reward[investment_amount]" id="reward_investment_amount">
+            <input type="text" class="integer form-control text-left w-25" aria-label="Amount (to the nearest dollar)" name="reward1[investment_amount]" id="reward1_investment_amount">
             <div class="col-sm-10 w-50">
-              <input type="text" class="form-control" name="reward[description]" id="reward[description]" placeholder="1x Free Dinner">
+              <input type="text" class="form-control" name="reward1[description]" id="reward1[description]" placeholder="1x Free Dinner">
             </div>
           </div>
         </div>
@@ -179,9 +179,9 @@
             <div class="input-group-prepend">
               <span class="input-group-text">$</span>
             </div>
-            <input type="text" class="integer form-control text-left w-25" aria-label="Amount (to the nearest dollar)" name="reward[investment_amount]" id="reward_investment_amount">
+            <input type="text" class="integer form-control text-left w-25" aria-label="Amount (to the nearest dollar)" name="reward2[investment_amount]" id="reward2_investment_amount">
             <div class="col-sm-10 w-50">
-              <input type="text" class="form-control" name="reward[description]" id="reward[description]">
+              <input type="text" class="form-control" name="reward2[description]" id="reward2[description]">
             </div>
           </div>
         </div>
@@ -192,9 +192,9 @@
             <div class="input-group-prepend">
               <span class="input-group-text">$</span>
             </div>
-            <input type="text" class="integer form-control text-left w-25" aria-label="Amount (to the nearest dollar)" name="reward[investment_amount]" id="reward_investment_amount">
+            <input type="text" class="integer form-control text-left w-25" aria-label="Amount (to the nearest dollar)" name="reward3[investment_amount]" id="reward3_investment_amount">
             <div class="col-sm-10 w-50">
-              <input type="text" class="form-control" name="reward[description]" id="reward[description]">
+              <input type="text" class="form-control" name="reward3[description]" id="reward3[description]">
             </div>
           </div>
         </div>
@@ -205,9 +205,9 @@
             <div class="input-group-prepend">
               <span class="input-group-text">$</span>
             </div>
-            <input type="text" class="integer form-control text-left w-25" aria-label="Amount (to the nearest dollar)" name="reward[investment_amount]" id="reward_investment_amount">
+            <input type="text" class="integer form-control text-left w-25" aria-label="Amount (to the nearest dollar)" name="reward4[investment_amount]" id="reward4_investment_amount">
             <div class="col-sm-10 w-50">
-              <input type="text" class="form-control" name="reward[description]" id="reward[description]">
+              <input type="text" class="form-control" name="reward4[description]" id="reward4[description]">
             </div>
           </div>
         </div>
