--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -67,7 +67,10 @@
 
     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
       <%#= link_to "Profile", "#", class: "dropdown-item" %>
-      <%= link_to "Logout", "/users/sign_out", method: :delete, class: "dropdown-item" %>
+      <%#= link_to "Logout", "/users/sign_out"(:authenticity_token => form_authenticity_token()), method: :delete, class: "dropdown-item" %>
+
+      <%= link_to 'Sign out', destroy_user_session_path(:authenticity_token => form_authenticity_token()), method: 'delete',class: "dropdown-item" %>
+
     </div>
   </li>
 </ul>
