--- a/app/views/investments/dashboard.html.erb
+++ b/app/views/investments/dashboard.html.erb
@@ -54,7 +54,7 @@
         <div class="text-center">
           <h1><img style="height: 45px;" src="https://img.icons8.com/carbon-copy/100/000000/restaurant.png"></h1>
           <h5><%= @investments.where(payment_date: nil).count%></h5>
-          <p class="text-secondary mb-2" style="font-size: 12px;">Pending investments</p>
+          <p class="text-secondary mb-2" style="font-size: 12px;">Pending Investment</p>
         </div>
       </div>
     </div>
