--- a/app/views/investments/map.html.erb
+++ b/app/views/investments/map.html.erb
@@ -12,7 +12,7 @@
   </div>
 
 
-<div class="container">
+<div class="container mt-4">
    <h3> Your funded places map: </h3>
     <div class="d-flex justify-content-center my-5">
     <div id="mapbox" class="rounded" style="width: 100%; height: 60vh;" data-markers="<%= @markers.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
