dynamic invest button, only investors can invest

--- a/app/views/campaigns/mycampaigns.html.erb
+++ b/app/views/campaigns/mycampaigns.html.erb
@@ -1,4 +1,4 @@
-<% if user_signed_in? && current_user.owner == true %>
+<% if user_signed_in? && current_user.owner %>
 
 <div class="d-flex" id="wrapper">
   <!-- Sidebar -->
