--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,6 +1,112 @@
-<% if user_signed_in? && current_user.owner == true %>
-  <p>Internal note: You are an owner</p>
-  <%= render "campaigns/shared/showowner" %>
-<% else %>
-  <%= render "campaigns/shared/investor" %>
-<% end %>
+<divs>
+  <%= render "campaigns/shared/carousel" %>
+</div>
+
+
+<div class="container" style="margin-top: -120px;">
+  <div class="row">
+    <div class="col-lg-8">
+      <!-- COMPANY LOGO -->
+      <div class="restaurant-logo position-relative">
+        <%= render "shared/restaurant_icon", campaign: @campaign %>
+      </div>
+
+      <h2 class="mt-5 font-weight-bold"><%= @campaign.company.name %></h2>
+      <h6 class="text-grey" id="company_type"><%= @campaign.company.type_store %></h6>
+
+      <div>
+        <div class="w-75" style="margin: 0 auto;">
+          <%= render "shared/campaign_status", campaign: @campaign %>
+        </div>
+
+        <h4 class="my-4"><%= @campaign.title %></h4>
+        <!-- SWITCH LATER WHEN CAMPAIGN DESCRIPTION GIVEN -->
+        <p><%= @campaign.company.description %></p>
+        <!-- -------------------------------------------- -->
+
+        <div class="w-75" style="margin: 0 auto;">
+          <%= render "shared/campaign_risk", campaign: @campaign %>
+        </div>
+
+        <div class="text-center my-5">
+          <iframe width="100%" height="360" frameborder="0" src="https://www.youtube.com/embed/6QS17b1itIE?autoplay=1"></iframe>
+        </div>
+
+        <h4><%= @campaign.company.name %></h4>
+        <p><%= @campaign.company.description %></p>
+      </div>
+
+      <!-- map  -->
+      <div class="d-flex justify-content-center my-5">
+        <div id="mapbox" class="rounded" style="width: 100%; height: 300px;" data-markers="<%= @marker.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+        <span class="address-box-green" style="z-index: 2; position: absolute; bottom: 53px; left: 20px;"><%= @company.address %></span>
+      </div>
+    </div>
+
+    <div class="col-12 col-lg-4" id="sidebar">
+      <!-- investment card -->
+      <div class="position-stickty-top-90-right">
+        <div id="card-fixed" class="mx-sm-auto">
+
+          <div class="card-investment-play bg-lightgreen p-4 m-0 card-campaign-status">
+            <!-- invest field and button -->
+            <%= simple_form_for [@campaign, @investment], url: new_campaign_investment_path(@campaign), method: :get do |f| %>
+            <div class="form-input d-flex justify-space-between align-items-center mb-4">
+              <%= f.input :amount, class: "input-field", placeholder: "$ 250", label: false, :required => true,  :input_html => { :type => "number" } %>
+              <% if current_user.owner? %>
+                <p class="text-center small m-0 p-2"><em>Create investor account</em></p>
+              <% else %>
+                <%= f.submit "Invest", class: "btn btn-success px-5", style:"margin-left: 16px;" %>
+              <% end %>
+            </div>
+            <% end %>
+
+            <!-- campaign stats -->
+            <%= render "shared/investment_terms", campaign: @campaign %>
+
+            <div class="d-flex flex-column justify-content-between">
+              <!-- range slider  -->
+              <form>
+                <div class="investment-slider">
+                  <label for="investmentRange" style="margin: 0; font-size: 12px;">Investment</label>
+                  <input type="range" class="investment-range w-100" min="20" max="5000" step="10" id="investmentRange">
+                </div>
+              </form>
+            </div>
+
+            <!-- return section -->
+            <%= render "shared/return_calculation", campaign: @campaign %>
+
+            <!-- rewards section -->
+            <div class="mt-4">
+              <h5 style="font-size: 12px;">My reward</h5>
+              <% @campaign.rewards.each_with_index do |reward, index| %>
+                <div id="reward-<%= index %>" class="d-flex align-items-center px-3 py-1 mt-2 reward" style="border-radius: 50px;" data-amount="<%= reward.investment_amount %>">
+                  <!-- <input type="hidden" id="reward-threshold-<%= index %>" > -->
+                  <i class="fas fa-gift"></i>
+                  <p class="m-0 ml-4" id="investment_reward"><%= reward.description %></p>
+                </div>
+              <% end %>
+            </div>
+
+          </div>
+        </div>
+        <!-- investment card closing div -->
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+
+
+
+<style>
+  .input-group-btn {
+    display: none;
+  }
+
+  .investment_amount {
+    margin: 0;
+  }
+</style>
