seed for 1 inv per campaing limitation

--- a/app/views/investments/dashboard.html.erb
+++ b/app/views/investments/dashboard.html.erb
@@ -49,15 +49,15 @@
       </div>
     </div>
 
-    <div class="card-campaign-status p-2 m-5" style="width: 150px; background-color: #f4f4f4; border-radius: 0px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);">
+<!--     <div class="card-campaign-status p-2 m-5" style="width: 150px; background-color: #f4f4f4; border-radius: 0px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);">
       <div class="d-flex mt-4 justify-content-around">
         <div class="text-center">
           <h1><img style="height: 45px;" src="https://img.icons8.com/carbon-copy/100/000000/restaurant.png"></h1>
-          <h5><%= @investments.where(payment_date: nil).count%></h5>
+          <h5><%#= @investments.where(payment_date: nil).count%></h5>
           <p class="text-secondary mb-2" style="font-size: 12px;">Pending Investment</p>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
   </div>
