--- a/app/views/investments/rewards.html.erb
+++ b/app/views/investments/rewards.html.erb
@@ -28,8 +28,9 @@
 
       <h1>Your rewards </h1>
       <table class="table table-hover">
-        <thead>
+        <thead class="">
           <tr>
+            <th scope="col"></th>
             <th scope="col">Restaurant</th>
             <th scope="col">Campaign</th>
             <th scope="col">Amount Invested</th>
@@ -46,6 +47,7 @@
          <% @investments_payed.each_with_index do |investment, index| %>
 
          <tr class="<%= index.even? ? 'bg-light' : '' %>">
+            <td scope="row"></td>
             <td scope="row"><%= investment.campaign.company.name %></td>
             <td><%= investment.campaign.title %></td>
             <td>$<%= number_with_delimiter(investment.amount, :delimiter => ',') %></td>
