Added payment dates to investments, created new confirmation success route and rerouted investment show

--- a/app/views/investments/confirmation.html.erb
+++ b/app/views/investments/confirmation.html.erb
@@ -5,7 +5,7 @@
       <h1 class="display-4 font-weight-normal">Investment Confirmed!</h1>
       <p class="lead font-weight-normal">Company X</p>
       <p>thanks you for your support</p>
-      <a class="btn btn-outline-secondary" href="/investments">Dashboard</a>
+      <%= link_to "Dashboard", investors_dashboard_path, class: "btn btn-outline-secondary"  %>
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
