--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <title>Fundeat</title>
 
     <%= action_cable_meta_tag %>
+    <%= csrf_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
   </head>
   <body class="d-flex flex-column h-100">
