mailer pre done

--- a/app/views/investments/rewards.html.erb
+++ b/app/views/investments/rewards.html.erb
@@ -35,7 +35,6 @@
             <th scope="col">Campaign</th>
             <th scope="col">Amount Invested</th>
             <th scope="col">Reward</th>
-            <th scope="col">Status</th>
             <th scope="col">Redeem</th>
 
 
@@ -51,14 +50,13 @@
             <% if investment.reward_redeemed %>
             <i class="fas fa-check-circle text-success" style="font-size: 24px;"></i>
             <% else %>
-            <i class="fas fa-circle" style="font-size: 24px; color: grey;"></i>
+            <i class="fas fa-circle" style="font-size: 24px; color: lightgrey;"></i>
             <% end %>
           </td>
           <td scope="row"><%= investment.campaign.company.name %></td>
           <td><%= investment.campaign.title %></td>
           <td>$<%= number_with_delimiter(investment.amount, :delimiter => ',') %></td>
           <td><%= investment.reward.description %></td>
-          <td>Pending</td>
           <td>
             <% unless investment.reward_redeemed %>
             <h5><%= link_to "Redeem", investment_reward_redemptions_path(investment), method: :post, class: "btn btn-success" %></h5>
@@ -68,10 +66,10 @@
         <% end %>
 
         <tr>
-          <td scope="row"> Total</td>
+          <td scope="row"></td>
+          <td>Total</td>
           <td></td>
           <td>$<%= number_with_delimiter(@investments_payed.sum("amount"), :delimiter=>',') %></td>
-          <td></td>
           <td></td>
           <td></td>
         </tr>
