--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -2,7 +2,8 @@
 
 <p>welcome to the Fundeat community! This is where great Restaurant investing starts... </p>
 
-<a href="http://www.fundeat.club/campaigns">Start investing</a>
+<%= link_to("Start investing", root_url) %>
+<!-- <a href="http://www.fundeat.club/campaigns">Start investing</a> -->
 
 <p>Best regards,</p>
 
