--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,37 +14,37 @@
       <% if user_signed_in? && current_user.owner == false %>
 
       <li class="nav-item active">
-       <%= link_to "Investing", "/campaigns", class: "nav-link" %>
+       <%= link_to "Investing", "/campaigns", class: "nav-link-custom" %>
      </li>
      <li class="nav-item active">
-       <%= link_to "Dashboard", "/myinvestments/dashboard", class: "nav-link" %>
+       <%= link_to "Dashboard", "/myinvestments/dashboard", class: "nav-link-custom" %>
      </li>
      <% elsif user_signed_in? && current_user.owner == true %>
      <li class="nav-item active">
-      <%= link_to "Raising", "/raising", class: "nav-link" %>
+      <%= link_to "Raising", "/raising", class: "nav-link-custom" %>
     </li>
     <li class="nav-item active">
-     <%= link_to "Dashboard", "/mycampaigns/owners_dashboard", class: "nav-link" %>
+     <%= link_to "Dashboard", "/mycampaigns/owners_dashboard", class: "nav-link-custom" %>
    </li>
    <% end %>
 
    <% unless user_signed_in? %>
 
    <li class="nav-item active">
-     <%= link_to "Investing", "/campaigns", class: "nav-link" %>
+     <%= link_to "Investing", "/campaigns", class: "nav-link-custom" %>
    </li>
 
    <li class="nav-item active">
-    <%= link_to "Raising", "/raising", class: "nav-link" %>
+    <%= link_to "Raising", "/raising", class: "nav-link-custom" %>
 
   </li>
 
   <li class="nav-item active">
-    <%= link_to "Login", "/users/sign_in", class: "nav-link" %>
+    <%= link_to "Login", "/users/sign_in", class: "nav-link-custom" %>
   </li>
 
   <li class="nav-item active">
-    <%= link_to "Signup", "/users/sign_up", class: "nav-link" %>
+    <%= link_to "Signup", "/users/sign_up", class: "nav-link-custom" %>
   </li>
 
   <% end %>
