--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,37 +13,38 @@
 
       <% if user_signed_in? && current_user.owner == false %>
 
-      <li class="nav-item active">
-       <%= link_to "Investing", "/campaigns", class: "nav-link-custom" %>
+      <li class="nav-item">
+        <% klass = controller_name == "campaigns" && action_name == "index" ? "active" : "" %>
+       <%= link_to "Investing", "/campaigns", class: "nav-link-custom #{klass}" %>
      </li>
-     <li class="nav-item active">
-       <%= link_to "Dashboard", "/myinvestments/dashboard", class: "nav-link-custom" %>
+     <li class="nav-item">
+       <%= link_to "Dashboard", "/myinvestments/dashboard", class: "nav-link-custom #{klass}" %>
      </li>
      <% elsif user_signed_in? && current_user.owner == true %>
-     <li class="nav-item active">
+     <li class="nav-item">
       <%= link_to "Raising", "/raising", class: "nav-link-custom" %>
     </li>
-    <li class="nav-item active">
+    <li class="nav-item ">
      <%= link_to "Dashboard", "/mycampaigns/owners_dashboard", class: "nav-link-custom" %>
    </li>
    <% end %>
 
    <% unless user_signed_in? %>
 
-   <li class="nav-item active">
+   <li class="nav-item ">
      <%= link_to "Investing", "/campaigns", class: "nav-link-custom" %>
    </li>
 
-   <li class="nav-item active">
+   <li class="nav-item">
     <%= link_to "Raising", "/raising", class: "nav-link-custom" %>
 
   </li>
 
-  <li class="nav-item active">
+  <li class="nav-item">
     <%= link_to "Login", "/users/sign_in", class: "nav-link-custom" %>
   </li>
 
-  <li class="nav-item active">
+  <li class="nav-item">
     <%= link_to "Signup", "/users/sign_up", class: "nav-link-custom" %>
   </li>
 
